# prueba-tecnica-lite-thinking

./: .env.example  .gitignore  README.md  docker-compose.yml  prueba.py  railway.toml
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  conftest.py  create_superuser.py  db.sqlite3  pyproject.toml  requirements.txt
backend/application/: __init__.py
backend/application/use_cases/: __init__.py  empresa_use_cases.py  inventario_use_cases.py  producto_use_cases.py
backend/apps/blockchain/: admin.py  apps.py  middleware.py  models.py  signals.py
backend/apps/blockchain/api/: router.py  serializers.py  views.py
backend/apps/blockchain/migrations/: 0001_initial.py  0002_alter_registroblockchain_timestamp_and_more.py
backend/apps/chatbot/: admin.py  models.py
backend/apps/chatbot/api/: router.py  serializers.py  views.py
backend/apps/chatbot/migrations/: 0001_initial.py  0002_initial.py
backend/apps/empresas/: admin.py  models.py
backend/apps/empresas/api/: router.py  serializers.py  views.py
backend/apps/empresas/migrations/: 0001_initial.py
backend/apps/inventario/: admin.py  models.py  utils.py
backend/apps/inventario/api/: router.py  serializers.py  views.py
backend/apps/inventario/migrations/: 0001_initial.py
backend/apps/productos/: admin.py  models.py
backend/apps/productos/api/: router.py  serializers.py  views.py
backend/apps/users/: admin.py  models.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: test_api_empresas.py  test_api_productos.py
domain/: README.md  pyproject.toml
domain/domain/: __init__.py  apps.py  exceptions.py
domain/domain/models/: __init__.py  empresa.py  inventario.py  producto.py  usuario.py
(+60 files in other folders)
